--- a/ImportANDClean.Rmd
+++ b/ImportANDClean.Rmd
@@ -1,5 +1,9 @@
 ```{r}
 library(tidyverse)
+library(dplyr)
+library(fs)
+
+options(scipen=999)
 ```
 
 
@@ -16,7 +20,7 @@ noaa_raw = do.call(rbind, lapply(files, function(x) read.csv(x, stringsAsFactors
       'MONTH_NAME', 'EVENT_TYPE', 'INJURIES_DIRECT',
       'DEATHS_DIRECT', 'DAMAGE_PROPERTY', 'BEGIN_LOCATION',
       'END_LOCATION', 'BEGIN_LAT', 'BEGIN_LON',
-      'END_LAT', 'END_LON', 'CZ_NAME')]
+      'END_LAT', 'END_LON', 'CZ_NAME', 'STATE_FIPS', 'CZ_FIPS')]
                                  ))
 ```
 
@@ -26,7 +30,7 @@ noaa_raw = do.call(rbind, lapply(files, function(x) read.csv(x, stringsAsFactors
 #Creates a list of states for filtering
 state_filter = c('ARKANSAS', 'TENNESSEE', 'ALABAMA', 'MISSISSIPPI', 
                     'GEORGIA', 'SOUTH CAROLINA', 'NORTH CAROLINA', 'KENTUCKY',
-                 'WEST VIRGINIA', 'VIRGINIA')
+                 'WEST VIRGINIA')
 
 #Filters the DF by the state_filter created above and only 2 disaster types
 #Also renames columns from all caps to lower case, because
@@ -36,7 +40,7 @@ noaa_select <- noaa_raw %>%
          injuries = INJURIES_DIRECT, deaths = DEATHS_DIRECT, damage = DAMAGE_PROPERTY, 
          begin_loc = BEGIN_LOCATION, end_loc = END_LOCATION, begin_lat = BEGIN_LAT, 
          begin_lon = BEGIN_LON, end_lat = END_LAT, end_lon = END_LON, county = CZ_NAME, 
-         event = EVENT_TYPE)
+         event = EVENT_TYPE, state_fips = STATE_FIPS, county_fips = CZ_FIPS)
 
 #Converts columns of all upper case values to only first letter capitals
 noaa_select <- noaa_select %>%
@@ -53,8 +57,7 @@ noaa_select <- noaa_select %>%
 
 
 ```{r}
-#Creates two columns and places only the numerical portion from the damage column into 
-#damage_num
+#Creates two columns and places only the numerical portion from the damage column into damage_num
 
 noaa_select <- noaa_select %>%
   separate(damage, c('damage_num', 'damage_mod'),
@@ -70,14 +73,64 @@ noaa_select$damage_mod <- noaa_select$damage %>%
 ```{r}
 #Filters out NA values and converts damage values to equal units based on damage_mod column
 noaa_select <- noaa_select %>%
-  filter(damage_mod == 'M' | damage_mod == 'K') %>%
-  mutate(damage_num = ifelse(damage_mod == 'M',
-                             damage_num <- damage_num * 1000000,
-                             damage_num <- damage_num* 1000))
+  filter(damage_mod == 'M' | damage_mod == 'K' & damage_num > 0) %>%
+  mutate(damage_cpi = if_else(damage_mod == 'M',
+                             1000000 * damage_num,
+                             1000 * damage_num))
+```
 
 
+```{r}
+#Loads in file with consumer price index from 1996 to 2020 adjusted for 1996 dollars and creates an adjusted column using 2020 CPI dollars as the new base
+
+cpi <- read_csv("cpi/CPI1996_to_2019.csv") %>%
+          mutate(cpi_adj = 161.75/CPI)
+
+#Creates a new data frame that merges the CPI data by year and creates a new column that shows damage values by 2020 CPI dollars
+
+floods <- merge(noaa_select, cpi, 
+                by.x = 'year', by.y = 'Year', 
+                all.x = TRUE, all.y = FALSE) %>%
+          mutate(damage_cpi = damage_cpi * cpi_adj)
+```
+
+
+```{r}
+#Imports two csv files containing census population data
+census_old <- read_csv("pop/1996-1999.csv")
+census_new <- read_csv("pop/2000-2019.csv")
+```
+
+
+```{r}
+#Creates a list of state fips codes for extraction from the census data, similar to the state filter I used previously in this notebook with the NOAA/NWS data. 
+fips_filter = c(1, 5, 13, 21, 28, 37, 45, 47, 54)
+
+#The U.S. Census Bureau in all of their infinite wisdom has decided to continue publishing their old datasets in a format that varies 'widely' (hahaha, get it? it's a pun...*groan*) from their data sets post 1999. The code below pivots their older data so it can be joined with their new data. God forbid someone on the federal end does this data manipulation themselves, one time, instead of having what I can only assume is thousands of individuals doing so. 
+census_full <- census_old %>%
+  pivot_wider(names_from = 'Year',
+              values_from = 'Pop') %>%
+  filter(state_fips %in% fips_filter) %>%
+  rename(pop1996 = `1996`, pop1997 = `1997`, pop1998 = `1998`, pop1999 = `1999`) %>%
+  merge(census_new, by.x = c('state_fips', 'county_fips'), 
+                    by.y = c('state_fips', 'county_fips'))
+```
+
+
+```{r}
 
 ```
+
+
+```{r}
+#Creates a new data directory in my working directory
+data <- dir_create('data')
+
+#Writes both necessary csv files to the working directory
+write.csv(census_full, 'data/census_full.csv', row.names = FALSE)
+write.csv(floods, 'data/floods.csv', row.names = FALSE)
+```
+
 
 
 
