--- a/ImportANDClean.Rmd
+++ b/ImportANDClean.Rmd
@@ -20,7 +20,8 @@ noaa_raw = do.call(rbind, lapply(files, function(x) read.csv(x, stringsAsFactors
       'MONTH_NAME', 'EVENT_TYPE', 'INJURIES_DIRECT',
       'DEATHS_DIRECT', 'DAMAGE_PROPERTY', 'BEGIN_LOCATION',
       'END_LOCATION', 'BEGIN_LAT', 'BEGIN_LON',
-      'END_LAT', 'END_LON', 'CZ_NAME', 'STATE_FIPS', 'CZ_FIPS')]
+      'END_LAT', 'END_LON', 'CZ_NAME', 'STATE_FIPS', 'CZ_FIPS',
+      'BEGIN_YEARMONTH')]
                                  ))
 ```
 
@@ -36,16 +37,16 @@ state_filter = c('ARKANSAS', 'TENNESSEE', 'ALABAMA', 'MISSISSIPPI',
 #Also renames columns from all caps to lower case, because
 noaa_select <- noaa_raw %>%
   filter(EVENT_TYPE == 'Flood' | EVENT_TYPE == 'Flash Flood', STATE %in% state_filter) %>%
-  rename(event_id = EVENT_ID, state = STATE, year = YEAR, month = MONTH_NAME, 
-         injuries = INJURIES_DIRECT, deaths = DEATHS_DIRECT, damage = DAMAGE_PROPERTY, 
+  rename(event_id = EVENT_ID, State = STATE, Year = YEAR, Month = MONTH_NAME, 
+         Injuries = INJURIES_DIRECT, Deaths = DEATHS_DIRECT, damage = DAMAGE_PROPERTY, 
          begin_loc = BEGIN_LOCATION, end_loc = END_LOCATION, begin_lat = BEGIN_LAT, 
-         begin_lon = BEGIN_LON, end_lat = END_LAT, end_lon = END_LON, county = CZ_NAME, 
-         event = EVENT_TYPE, state_fips = STATE_FIPS, county_fips = CZ_FIPS)
+         begin_lon = BEGIN_LON, end_lat = END_LAT, end_lon = END_LON, County = CZ_NAME, 
+         Event = EVENT_TYPE, state_fips = STATE_FIPS, county_fips = CZ_FIPS, date_order = BEGIN_YEARMONTH)
 
 #Converts columns of all upper case values to only first letter capitals
 noaa_select <- noaa_select %>%
-  mutate(state = str_to_title(state), 
-         county = str_to_title(county),
+  mutate(State = str_to_title(State), 
+         County = str_to_title(County),
          begin_loc = str_to_title(begin_loc),
          end_loc = str_to_title(end_loc))
 
@@ -74,7 +75,7 @@ noaa_select$damage_mod <- noaa_select$damage %>%
 #Filters out NA values and converts damage values to equal units based on damage_mod column
 noaa_select <- noaa_select %>%
   filter(damage_mod == 'M' | damage_mod == 'K' & damage_num > 0) %>%
-  mutate(damage_cpi = if_else(damage_mod == 'M',
+  mutate(Damage_Nominal = if_else(damage_mod == 'M',
                              1000000 * damage_num,
                              1000 * damage_num))
 ```
@@ -89,10 +90,11 @@ cpi <- read_csv("cpi/CPI1996_to_2019.csv") %>%
 #Creates a new data frame that merges the CPI data by year and creates a new column that shows damage values by 2020 CPI dollars and fills empty values in the begin_loc column with 'Countywide'
 
 floods <- merge(noaa_select, cpi, 
-                by.x = 'year', by.y = 'Year', 
+                by.x = 'Year', by.y = 'Year', 
                 all.x = TRUE, all.y = FALSE) %>%
-          mutate(damage_cpi = damage_cpi * cpi_adj) %>%
-          mutate(begin_loc = if_else(begin_loc == '', 'Countywide', begin_loc))
+          mutate(Damage_CPIAdj = Damage_Nominal * cpi_adj) %>%
+          mutate(begin_loc = if_else(begin_loc == '', 'Countywide', begin_loc)) %>%
+          relocate(State, County, Year, Month, Event, Damage_Nominal, Damage_CPIAdj, CPI, Injuries, Deaths)
 ```
 
 
